# multiple_discount

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
multiple_dis/: api.py  hooks.py  modules.txt  multip_dis.patch  patches.txt
multiple_dis/fixtures/: custom_field.json
multiple_dis/patches/: add_discounts.py
multiple_dis/patches/v1_0/: new_discounts.py
multiple_dis/public/js/: sales_order_item.js
multiple_uom/: api.py  hooks.py  modules.txt  patches.txt
multiple_uom/patches/: add_discounts_field.py  add_sales_order_item_discounts.py
multiple_uom/public/js/: sales_order_item.js
